# git_command_center

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  git-command-center.spec  pyproject.toml
.github/release-notes/: v0.1.0.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  roadmap.md
src/git_command_center/: __init__.py  __main__.py
src/git_command_center/ai/: __init__.py  provider.py
src/git_command_center/config/: __init__.py  settings.py
src/git_command_center/core/: __init__.py  models.py  safety.py
src/git_command_center/data/: __init__.py  commands.en.yaml  commands.it.yaml
src/git_command_center/data/locales/: __init__.py  de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  pt.yaml
src/git_command_center/git/: __init__.py  service.py
src/git_command_center/i18n/: __init__.py  translator.py
src/git_command_center/services/: catalog.py  github.py  path_setup.py  planner.py  platform.py  simulation.py
src/git_command_center/themes/: gcc.tcss
src/git_command_center/ui/: __init__.py  app.py
src/git_command_center/widgets/: __init__.py
tests/: conftest.py  test_app_smoke.py  test_catalog_and_planner.py  test_config.py  test_git_service.py  test_i18n.py  test_path_setup.py  test_platform.py  test_safety.py  test_simulation.py
