[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "git-command-center"
version = "0.1.0"
description = "A safe, educational and visual Git terminal assistant."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Git Command Center contributors" }]
dependencies = [
  "GitPython>=3.1.44",
  "pydantic>=2.10",
  "PyYAML>=6.0.2",
  "rich>=13.9",
  "textual>=1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14",
  "pyinstaller>=6.11",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
gcc-tui = "git_command_center.__main__:main"
git-command-center = "git_command_center.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/git_command_center"]

[tool.hatch.build.targets.sdist]
include = ["src/git_command_center", "tests", "docs", "README.md", "LICENSE"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["git_command_center"]
